# gha-optimizer

./: .ai_assistant_config.md  .flake8  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  MANIFEST.in  PROJECT-OVERVIEW.md  README.md  debug.txt  pyproject.toml  pyvenv.cfg  requirements.txt  test_cli.py
.cursor/rules/: ai-integration.mdc  cli-patterns.mdc  commit-standart.mdc  core-constraints.mdc  documentation-updates.mdc  gha-optimizer-core.mdc  post-actions.mdc  python-standards.mdc  review-list.mdc  system-role.mdc
.github/: TRUNK_BASED_DEVELOPMENT.md  pull_request_template.md
.github/workflows/: ci.yml  release.yml
docs/: ai-schema.md  architecture.md  implementation-plan.md  optimization-patterns.md  testing-setup.md
examples/: sample-report.md
scripts/: setup-testing.sh  update-docs-version.py
src/gha_optimizer/: __init__.py
src/gha_optimizer/analyzers/: __init__.py  ai_analyzer.py
src/gha_optimizer/cli/: main.py
src/gha_optimizer/collectors/: __init__.py  github_client.py  workflow_collector.py
src/gha_optimizer/commands/: __init__.py  apply.py  scan.py
src/gha_optimizer/docs/: optimization-patterns.md
src/gha_optimizer/models/: __init__.py  workflow.py
src/gha_optimizer/reports/: __init__.py  console_reporter.py
src/gha_optimizer/utils/: __init__.py  config.py  helpers.py  logger.py
test-repos/: README.md
test-repos/gha-optimizer-test-basic/: package.json
test-repos/gha-optimizer-test-basic/.github/workflows/: ci.yml
test-repos/gha-optimizer-test-docker/: Dockerfile
test-repos/gha-optimizer-test-docker/.github/workflows/: docker.yml
test-repos/gha-optimizer-test-repo/: Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  package.json  pom.xml  requirements-dev.txt  requirements.txt
test-repos/gha-optimizer-test-repo/.github/workflows/: basic-java.yml  basic-nodejs.yml  basic-python.yml  conditional-problems.yml  docker-build.yml  full-pipeline.yml  runner-issues.yml
